# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "lmcache_rust_raw_block_io"
version = "0.0.1"
description = "Rust (PyO3) raw block I/O helpers for LMCache storage plugins."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.maturin]
bindings = "pyo3"
module-name = "lmcache_rust_raw_block_io"

